Добавил важные детали

--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -61,6 +61,8 @@
 						<ul>
 							<li><p>Учусь лингвистике, планирую быть лингвистом, по ночам мне тоже снится лингвистика. Да и просто <em>хороший человек</em>. Надеюсь. Может показаться, что я злой, но на самом деле я добрый и открытый.</p></li>
 							<li><p>Как заинтересовался лингвистикой - не помню. Вроде просто любил читать про это в Википедии, потом перешел на книжки. Первого живого лингвиста увидел когда мне было 17 лет. А теперь просто хочу понять побольше про этот мир, и это навязчивое желание меня не отпускает.</p></li>
+							<li><p>По причине, указанной в предыдущем пункте, являюсь большим любителем самообразования. Потому что откуда в Нахабино Московской области лингвисты. Да и вообще ученые.</p></li>
+							<li><p>Повыигрывал какие-то незначительные олимпиады, но в целом мне это не понравилось. Не могу заставить себя думать в точности так же, как другие люди. Да и там почти везде примешана разная филология.</p></li>
 							<li><p>Что меня точно не интересует - филология и прочие культурные вещи. Я считаю, что лингвистика это естественная наука и должна соответствовать своему статусу. <s>Именно поэтому обладаю неприятной привычкой выписывать разных людей из лингвистов.</s></p></li>
 							<li><p>У меня есть кот. Зовут Шурик. Посмотрите на него:</p><img src="shurikphoto.jpg" style="height:200px"></li>
 							<li><p>Единственное что с воображением проблемы. Именно поэтому тут так мало написано. <s>Да и нарисовано тоже.</s></p></li>
